release v0.8.0
